--- a/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
+++ b/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <script src="~/wxstatic/js/mui.loading.js"></script>
     <script src="~/wxstatic/js/mui.picker.all.js"></script>
     <script src="~/wxstatic/js/getPatamters.js"></script>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
     @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
