--- a/HouseManage/HouseManage/Views/DailyCheck/EditCheckResult.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/EditCheckResult.cshtml
@@ -5,7 +5,7 @@
     var FWINFO = ViewBag.FWINFO as List<Data.MSSQL.Model.BusinessModel.SimpleShopInfo>;
     var CHECKINFO = ViewBag.CHECKINFO as List<Data.MSSQL.Model.BusinessModel.SimpleCheckResultDetail>;
 }
-
+    <script src="~/wxstatic/js/wx.confg.js"></script>
 <div id="popover" class="mui-popover">
     <div class="mui-scroll-wrapper" id="scroll">
         <div class="mui-scroll">
@@ -87,7 +87,7 @@
                         <label>检查结果:</label>
                     </div>
                     @{
-                        
+
                         if (@FWINFO[0].JCJG == 1)
                         {
                             <div class="mui-col-sm-4 mui-col-xs-4" style="padding-left:10px;padding-bottom:5px;padding-top:5px;">
@@ -108,7 +108,7 @@
                             <div class="mui-col-sm-4 mui-col-xs-4" style="padding-left:10px;padding-bottom:5px;padding-top:5px;">
                                 <div class="mui-input-row mui-radio">
                                     <label>合格</label>
-                                    <input name="radio1" value="1" id="pass" type="radio"  onclick="passall()">
+                                    <input name="radio1" value="1" id="pass" type="radio" onclick="passall()">
                                 </div>
                             </div>
                             <div class="mui-col-sm-5 mui-col-xs-5" style="padding-left:10px;padding-bottom:5px;padding-top:5px;">
@@ -137,6 +137,23 @@
                         <input type="text" class="mui-input-clear" placeholder="请输入整改要求" style="width:95%" id="Requirement" value="@FWINFO[0].ZGYQ">
                     </div>
                 </div>
+                <div class="mui-row">
+                    <div class="mui-col-sm-3 mui-col-xs-3" style="padding-left:10px;padding-bottom:5px;padding-top:14px;">
+                        <label>问题图片:</label>
+                    </div>
+                    <div class="mui-col-sm-9 mui-col-xs-9" style="padding-left:10px;padding-bottom:5px;padding-top:5px;" id="imgcontent">
+                    </div>
+                    <style type="text/css">
+                        img {
+                            width: 29%;
+                            height: 29%;
+                            margin: 0 3px;
+                        }
+                    </style>
+                </div>
+                <div class="mui-row">
+                    <a href="javascript:void(0);" id="uploadFile" class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" style="padding: 5px 20px;">上传图片</a>
+                </div>
             </div>
         </div>
         <button type="button" class="mui-btn mui-btn-primary" style="width:100%" onclick="submit()">提交</button>
@@ -146,6 +163,42 @@
 
 </div>
 <script>
+    (function ($) {
+        $.init({
+            swipeBack: true
+        });
+        //阻尼系数
+        var deceleration = mui.os.ios ? 0.003 : 0.0009;
+        mui('.mui-scroll-wrapper').scroll({
+            deceleration: 0.0005 //flick 减速系数，系数越大，滚动速度越慢，滚动距离越小，默认值0.0006
+        });
+        jq("#search").on("input", function () {
+            reloadStore(this.value);
+        });
+        var InnerImg = function (idx, url, img) {
+            return "<img src='" + url + "' url='" + url + "' idx='" + idx + "'>";
+            //return "<img src='data:image/jpeg;base64," + img + "' url='" + url + "' idx='" + idx + "'>";
+        }
+        var b = new wxCon();
+        jq("#uploadFile").on("tap", function () {
+            jq(this).text("重新上传");
+            b.taskLocalPicData(function (idx, url, img) {
+                imgs.push(img);
+                jq("#imgcontent").append(InnerImg(idx, url, img));
+                loadListen();
+            }, function (picUrls) {
+                imgs = [];
+                jq("#imgcontent").empty();
+            })
+        });
+        var loadListen = function () {
+            jq("#imgcontent img").on("tap", function () {
+                b.previewImage(imgs, jq(this).attr("url"));
+            })
+        }
+        loadListen();
+    })(mui);
+
     var temp = {
         RESULT_ID: '@ViewBag.FWINFO[0].RESULT_ID',
             @*FWID: '@ViewBag.FWINFO[0].FWID',*@
@@ -155,10 +208,7 @@
         CHECK_DETAIL_RESULT: [],
         INSERTINFO: {},
     };
-    
-    mui('.mui-scroll-wrapper').scroll({
-        deceleration: 0.0005 //flick 减速系数，系数越大，滚动速度越慢，滚动距离越小，默认值0.0006
-    });
+   
     mui('.bottomPopover').popover('toggle');
     window.onload = function () {
         var height = document.documentElement.clientWidth;
@@ -270,7 +320,7 @@
             mui.alert("检查详情中有不合格的项，总体检查结果不能为合格！请确认!","警告","确定")
         }
         else {
-             mui.ajax('PostUpdateCheckResult', {
+            mui.ajax('PostUpdateCheckResult', {
             type: 'post',
             data: temp,
             timeout: 50000,
