--- a/HouseManage/HouseManage/Views/User/Register.cshtml
+++ b/HouseManage/HouseManage/Views/User/Register.cshtml
@@ -18,7 +18,7 @@
                 <label>手机号码</label>
                 <input type="text" placeholder="请输入手机号码" class="mui-input-clear" id="userPhone">
             </div>
-            <div class="mui-input-row">
+            <div class="mui-input-row" hidden="hidden">
                 <label>用户类型</label>
                 <input type="text" class="mui-input-clear" placeholder="请选择用户类型" id="userType">
                 <input type="text" class="mui-input-clear" placeholder="请选择用户类型" id="userTypeVal" hidden="hidden">
@@ -58,10 +58,10 @@
                 mui.toast('请输入正确手机号!');
                 return;
             }
-            if (data.type == "" || data.type == undefined || data.type == null) {
-                mui.toast('请选择用户类型!');
-                return;
-            }
+            //if (data.type == "" || data.type == undefined || data.type == null) {
+            //    mui.toast('请选择用户类型!');
+            //    return;
+            //}
             mui.showLoading("授权中...", "div"); //加载文字和类型，plus环境中类型为div时强制以div方式显示
             $.post("WXRegister", data,function (result) {
                 mui.hideLoading();//隐藏后的回调函数
